style.css
 /* if desktop */
.mobile_device {
    display: none;
}

html, body {
  background: rgb(15, 15, 15);
  margin: 0px;
  padding: 0px;
}

.content {
  position: absolute;
  width: 100%;
  height: 100%;
}

/* if mobile device max width 380px */
@media only screen and (max-device-width: 380px) {
    .mobile_device{display: block;}       
    .desktop {display: none;}
} 

/* if mobile device max width 480px */
@media only screen and (max-device-width: 480px) {
   .mobile_device{display: block;}
   .desktop {display: none;}
}




.gallery1 {
  position: absolute;
  background: rgb(25, 25, 25);
  width: 1744px;
  height: 500px;
  display: block;
  z-index: 0;
  top: 210px;
  left: max(50%, 960px);
  max-height: 52.1%;
  max-width: 93%;
  margin-left: -880px;
  transform: scale();
}


/* +520 each time */

#rectangle2 {
  top: 730px;
}

#rectangle3 {
  top: 1250px;
}

#rectangle4 {
  top: 1770px;
}

#rectangle5 {
  top: 2290px;
}

#rectangle6 {
  top: 2810px;
}

#rectangle7 {
  top: 3330px;
}

#rectangle8 {
  top: 3850px;
}

#rectangle9 {
  top: 4370px;
}

#rectangle11 {
  top: 4890px;
}

#rectangle12 {
  top: 5410px;
}

.gallery__link {
  margin: 15px;
  overflow: hidden;
}
.gallery__link:hover .gallery__image {
  filter: grayscale(0);
}
.gallery__link:hover .gallery__caption {
  opacity: 1;
}
.gallery__thumb {
  position: relative;
  padding: 0px 10px 0px;
}
.gallery__image {
  position: relative;
  color: black;
  display: block;
  width: 960px;
  transition: 0.3s;
  top: 10px;
}


.header {
    z-index: 1;
    height: 100%;
}

.starfield {
  position: relative;
  width: 100%;
  z-index: 1;
  height: 135px;
  object-fit: cover;
  min-width: 5000px;
}

.option {
  position: absolute;

  color: white;
}

.page_title {
  position: absolute;
  font-family: sf_ui__textheavy;
  font-size: 40px;
  color: white;
  text-decoration: none;
  left: 5px;
  width: 1000px;
  margin: 30px 25px 25px;
  z-index: 2;
}

.title {
  position: absolute;
  font-family: sf_ui__textheavy;
  font-size:22px;
  color: rgb(200, 200, 200);
  width: 600px;
  top: 15px;
  left: 25px;
  margin: 0px 960px 25px;
  z-index: 2;
  text-decoration: none;
}

.title_subscript {
  position: absolute;
  font-family: sf_ui__textregular;
  font-size: 19px;
  color: white;
  text-decoration: none;
  left: 5px;
  width: 1000px;
  margin: 80px 25px 25px;
  z-index: 2;
}

.caption {
  position: absolute;
  font-family: sf_ui__textregular;
  font-size: 14px;
  color: rgb(200, 200, 200);
  text-decoration: none;
  z-index: 2;
  width: 720px;
  top: 65px;
  left: 25px;
  margin: 0px 960px 25px;
  overflow-wrap: break-word;
  line-height: 25px;
}

